Added errors to required fields in dev dialogs and updated PWA theme color

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 
   <title>Igloo Aurora</title>
-  <meta name="theme-color" content="#0083ff">
+  <meta name="theme-color" content="#0057cb">
 
   <link rel="icon" sizes="192x192" href="./android/android-launchericon-192x192.png">
   <link rel="apple-touch-icon" href="./ios/ios-appicon-1024-1024.png">
