Optional fields in create device and create value dialog (UX only)

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="HandheldFriendly" content="true" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -21,21 +21,6 @@
     <title>Igloo Aurora</title>
     <meta name="theme-color" content="#0057cb" />
     <meta name="msapplication-TileColor" content="#0057cb" />
-    <meta
-      name="msapplication-TileImage"
-      content="./windows/Square150x150Logo.scale-100"
-    />
-
-    <link
-      rel="icon"
-      sizes="192x192"
-      href="./android/android-launchericon-192x192.png"
-    />
-    <link
-      rel="icon"
-      sizes="512x512"
-      href="./android/android-launchericon-512x512.png"
-    />
     <link rel="apple-touch-icon" href="./ios/ios-appicon-1024-1024.png" />
     <link
       rel="apple-touch-icon"
@@ -54,92 +39,92 @@
     />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link
-      href="/ios-launchimage-2732-2048.png"
+      href="./ios/ios-launchimage-2732-2048.png"
       sizes="2732x2048"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-2436-1125.png"
+      href="./ios/ios-launchimage-2436-1125.png"
       sizes="2436x1125"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-2224-1668.png"
+      href="./ios/ios-launchimage-2224-1668.png"
       sizes="2208x1242"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-2208-1242.png"
+      href="./ios/ios-launchimage-2208-1242.png"
       sizes="2208x1242"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-2048-2732.png"
+      href="./ios/ios-launchimage-2048-2732.png"
       sizes="2048x2732"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-2048-1536.png"
+      href="./ios/ios-launchimage-2048-1536.png"
       sizes="2048x1536"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1668-2224.png"
+      href="./ios/ios-launchimage-1668-2224.png"
       sizes="1668x2224"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1536-2048.png"
+      href="./ios/ios-launchimage-1536-2048.png"
       sizes="1536x2048"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1334-750.png"
+      href="./ios/ios-launchimage-1334-750.png"
       sizes="1334x750"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1242-2208.png"
+      href="./ios/ios-launchimage-1242-2208.png"
       sizes="1242x2208"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1136-640.png"
+      href="./ios/ios-launchimage-1136-640.png"
       sizes="1136x640"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1125-2436.png"
+      href="./ios/ios-launchimage-1125-2436.png"
       sizes="1125x2436"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-1024-768.png"
+      href="./ios/ios-launchimage-1024-768.png"
       sizes="1024x768"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-768-1024.png"
+      href="./ios/ios-launchimage-768-1024.png"
       sizes="768x1024"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-750-1334.png"
+      href="./ios/ios-launchimage-750-1334.png"
       sizes="750x1334"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-640-1136.png"
+      href="./ios/ios-launchimage-640-1136.png"
       sizes="640x1336"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-640-960.png"
+      href="./ios/ios-launchimage-640-960.png"
       sizes="640x960"
       rel="apple-touch-startup-image"
     />
     <link
-      href="/ios-launchimage-320-480.png"
+      href="./ios/ios-launchimage-320-480.png"
       sizes="320x480"
       rel="apple-touch-startup-image"
     />
