Fab moves up when snack bar opens, minor fixes

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,12 @@
     <title>Igloo Aurora</title>
     <meta name="theme-color" content="#0057cb" />
     <meta name="msapplication-TileColor" content="#0057cb" />
+    <meta name="msapplication-navbutton-color" content="#0057cb" />
     <link rel="apple-touch-icon" href="./ios/ios-appicon-1024-1024.png" />
+    <meta name="apple-mobile-web-app-title" content="Igloo Aurora" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
     <link
       rel="apple-touch-icon"
       sizes="152x152"
@@ -32,16 +37,14 @@
       sizes="180x180"
       href="./ios/ios-appicon-180-180.png"
     />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link
-      rel="apple-touch-startup-image"
-      href="./ios/ios-launchimage-1536-2048.png"
-    />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link
       href="./ios/ios-launchimage-2732-2048.png"
       sizes="2732x2048"
       rel="apple-touch-startup-image"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="./ios/ios-launchimage-1536-2048.png"
     />
     <link
       href="./ios/ios-launchimage-2436-1125.png"
